syntax = "proto3";

package event;

option go_package = "github.com/cp-rektmart/aconcert-microservice/pkg/proto/event;eventpb";

// Event message
message Event {
  string id = 1;
  string name = 2;
  string description = 3;
  string location_id = 4;
  repeated string artist = 5;
  string event_date = 6;
  string thumbnail = 7;
  repeated string images = 8;
  string created_at = 9;
  string updated_at = 10;
  string deleted_at = 11;
}

// CreateEvent
message CreateEventRequest {
  string name = 1;
  string description = 2;
  string location_id = 3;
  repeated string artist = 4;
  string event_date = 5;
  string thumbnail = 6;
  repeated string images = 7;
}

message CreateEventResponse {
  string id = 1;
}

// GetEvent
message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  Event event = 1;
}

// UpdateEvent
message UpdateEventRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string location_id = 4;
  repeated string artist = 5;
  optional string event_date = 6;
  optional string thumbnail = 7;
  repeated string images = 8;
}

message UpdateEventResponse {
  string id = 1;
}

// DeleteEvent
message DeleteEventRequest {
  string id = 1;
}

message DeleteEventResponse {
  // Empty response - no fields needed
  string id = 1;
}

message Pagination {
  int32 total = 1;
  int32 count = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

// ListEvents request with sorting, ordering, and pagination
message ListEventsRequest {
  optional string query = 1;        // search keyword
  optional string sort_by = 2;      // field to sort by (e.g., "name", "event_date")
  optional string order = 3;        // "asc" or "desc"
  optional int32 limit = 4;         // number of items per page
  optional int32 page = 5;          // page number
}

message ListEventsResponse {
  repeated Event events = 1;
  Pagination pagination = 2;
}

message Empty {}

// EventZone message
message EventZone {
  string id = 1;
  string event_id = 2;
  string location_id = 3;
  int32 zone_number = 4;
  double price = 5;
  string color = 6;
  string name = 7;
  string description = 8;
  bool is_sold_out = 9;
}

message CreateEventZoneRequest {
  string event_id = 1;
  string location_id = 2;
  int32 zone_number = 3;
  double price = 4;
  string color = 5;
  string name = 6;
  string description = 7;
}

message CreateEventZoneResponse {
  string id = 1;
}

message GetEventZoneByEventIdRequest {
  string event_id = 1;
}

message GetEventZoneByEventIdResponse {
  repeated EventZone list = 1;
}

message UpdateEventZoneRequest {
  string id = 1;
  optional string event_id = 2;
  optional string location_id = 3;
  optional int32 zone_number = 4;
  optional double price = 5;
  optional string color = 6;
  optional string name = 7;
  optional string description = 8;
  optional bool is_sold_out = 9;
}

message UpdateEventZoneResponse {
  string id = 1;
}

message DeleteEventZoneRequest {
  string id = 1;
}

// EventService definition
service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (Empty);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);

  rpc CreateEventZone(CreateEventZoneRequest) returns (CreateEventZoneResponse);
  rpc GetEventZoneByEventId(GetEventZoneByEventIdRequest) returns (GetEventZoneByEventIdResponse);
  rpc UpdateEventZone(UpdateEventZoneRequest) returns (UpdateEventZoneResponse);
  rpc DeleteEventZone(DeleteEventZoneRequest) returns (Empty);
}
